Prevent tabs overlapping icon in detail page

--- a/mapentity/static/mapentity/style.css
+++ b/mapentity/static/mapentity/style.css
@@ -390,8 +390,12 @@ span.filter-info {
     height: 35px;
 }
 
-.details-panel .nav-tabs li.active a {
-    background-color: rgba(255,255,255,0.9);
+.details-panel .nav-tabs {
+    margin-left: 40px;
+}
+
+.details-panel .nav-tabs li:first-child {
+    margin-left: 10px;
 }
 
 
